@@ -1,3 +1,6 @@
+* Fixed invalid sorting of collocation result file (which resulted in wrong
+  results when performing a collocation resampling).
+
 * Fixed wrong independent dimension length for altitude/pressure bounds for
   SCIAMACHY Level2 ingestion.
 
